<resources>
    <string name="app_name">RealCube</string>
    <string name="options">Options</string>
    <string name="sensitivity1">Cube Manipulation Sensitivity</string>
    <string name="sensitivity2">Cube Rotation Sensitivity</string>
    <string name="help">Help</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="solve">Solve</string>
    <string name="scramble">Scramble</string>
    <string name="rotate">Hold to rotate cube</string>
    <string name="moveLog">Move Log:</string>
    <string name="defaultSettings">Restore Defaults</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="onePointOne">1.1</string>
</resources>
