<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="atwatanabe.realcube.GameActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/scrambleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scramble"/>

        <Button
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"/>

        <Button
            android:id="@+id/solveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solve"/>

    </LinearLayout>

    <!--TextView
        android:id="@+id/logText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moveLog"/-->

    <!--TextView
        android:id="@+id/valXDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="40dp"/>

    <TextView
        android:id="@+id/valYDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="40dp"/>

    <TextView
        android:id="@+id/valZDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="40dp"/-->

    <TextView
        android:id="@+id/moveText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moveLog"
        android:textSize="50dp"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/upLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"/>
            <Button
                android:id="@+id/upCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp" />
            <Button
                android:id="@+id/upRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/middleLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"/>
            <Button
                android:id="@+id/middleCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"/>
            <Button
                android:id="@+id/middleRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/downLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp" />
            <Button
                android:id="@+id/downCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"/>
            <Button
                android:id="@+id/downRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"/>

        </LinearLayout>

    </LinearLayout>


    <!--GLSurfaceView
        android:id="@+id/glSurfaceView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/-->

    <Button
        android:id="@+id/rotateCubeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        android:padding="30dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/undoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/undo"
            android:layout_alignParentLeft="true"/>

        <Button
            android:id="@+id/redoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redo"
            android:layout_alignParentRight="true"/>

     </RelativeLayout>

</LinearLayout>
